--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <h1>SIT223-SIT753 - Professional Practice in Information Technology</h1>
+<h2> Unit Chair: Minschlingus Dinson </h2>
+<h2> Trimester 698 </h2>
 </body>
 </html>
