remove unit chair

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>SIT223-SIT753 - Professional Practice in Information Technology</h1>
-<h2> Unit Chair: Schlungus Dingson </h2>
+<h2> Unit Chair: </h2>
 <h2> Trimester 234 </h2>
 <h3> navbar added </h3>
 </body>
