add heading and increase text size

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <h2> Unit Chair: ataingus Schlungus Dingson </h2>
 <h2> Trimester 698 </h2>
 <h3> navbar added </h3>
+<h3> this will help you not be dumb </h3>
 </body>
 </html>
